# kitsu_exporter

./: .gitignore  LICENSE  README.md  pyproject.toml
kitsu_exporter/: __init__.py  api_client.py  app.py  exporter.py
