[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitsu-exporter"
version = "0.1.0"
description = "Kitsu API(Gazu) Shot Exporter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gazu>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "textual>=7.2.0",
    "Pillow>=11.1.0",
]

[project.scripts]
kitsu-exporter = "kitsu_exporter.app:main"
kitsu_exporter = "kitsu_exporter.app:main"

[tool.uv]
package = true
